--- a/spice/templates/transient_sweep.sp.tmpl
+++ b/spice/templates/transient_sweep.sp.tmpl
@@ -1,19 +1,18 @@
-.title <test_relay.sp>
-.hdl nem_relay.va
+.title <transient_sweep_${N}b.sp>
+.hdl ../models/nem_relay_${N}b.va
 
 ** Create relay and start at z=0 **
-Xnem gnd Vg Vsrc gnd z nem_relay
+Xnem ${dspins} Vg gnd z nem_relay
 .ic V(z)=0
 
-** Test fast transitions **
+** Source voltage **
 Vsrc Vsrc gnd 1V
 
-** Sweep voltage (unipolar) **
+** Sweep gate voltage **
 Vg Vg gnd 0V PWL(0s 0V 10us 0V 10.0001us 5V 20us 5V 20.0001us 0V 30us 0V)
 
-** Generate I-V plot **
+** Options **
 .tran 0.0001us 30us
-
 .probe V(Vg) V(Vsrc) PAR('abs(I(Vsrc))') z
 .option post=2
 .option runlvl=5 accurate
