Make models have bit count in name

--- a/spice/templates/nem_relay.va.tmpl
+++ b/spice/templates/nem_relay.va.tmpl
@@ -7,7 +7,7 @@
 `include "constants.vams"
 `include "disciplines.vams"
 
-module nem_relay($sdparams, g, b, z);
+module nem_relay_${N}b($sdparams, g, b, z);
     $sddefs
     inout g;
     electrical g;
