Smallfix to the transient analysis

--- a/spice/templates/transient_sweep.sp.tmpl
+++ b/spice/templates/transient_sweep.sp.tmpl
@@ -2,7 +2,7 @@
 .hdl ../models/nem_relay_${N}b.va
 
 ** Create relay and start at z=0 **
-Xnem ${dspins} Vg gnd z nem_relay_{N}b
+Xnem ${dspins} Vg gnd z nem_relay_${N}b
 .ic V(z)=0
 
 ** Source voltage **
