--- a/spice/templates/ohmux_test.sp.tmpl
+++ b/spice/templates/ohmux_test.sp.tmpl
@@ -1,5 +1,5 @@
-.title <ohmux_test_${M}i_${N}b_ref.sp>
-.include ../models/nem_ohmux_${M}i_${N}b_ref.sp
+.title <ohmux_test_${M}i_${N}b.sp>
+.include ../models/nem_ohmux_${M}i_${N}b.sp
 
 ** Tests one-hot multiplexer using analog inputs **
 
