Trying to get SiSmart working

--- a/spice/templates/nem_ohmux.sp.tmpl
+++ b/spice/templates/nem_ohmux.sp.tmpl
@@ -1,10 +1,10 @@
 .title <nem_ohmux_${M}i_${N}b.sp>
 .hdl nem_relay_${N}b.va
+.global VDD VB VSS
 
 ** Create relay and start at z=0 **
 ** Format is I{i}_{b} where {i} is input number, {b} is bit index **
-.subckt nem_ohmux_${M}i_${N}b $pins
-    Vbody Vbody gnd ${Vbody}V
+.subckt nem_ohmux_${M}i_${N}b $pins VDD VB VSS
     $relays
     $ics
 .ends
