--- a/liberty/templates/nem_ohmux.inst.tmpl
+++ b/liberty/templates/nem_ohmux.inst.tmpl
@@ -1,4 +1,4 @@
-set_netlist_file [get_location]../../spice/models/nem_ohmux_${M}i_${N}b.sp
+set_netlist_file [get_location]/../../spice/models/nem_ohmux_${M}i_${N}b.sp
 
 
 ## 
