--- a/spice/templates/nem_ohmux_inv.sp.tmpl
+++ b/spice/templates/nem_ohmux_inv.sp.tmpl
@@ -1,6 +1,6 @@
 .title <nem_ohmux_invd${D}_${M}i_${N}b.sp>
 .include tsmc40inc.sp
-.hdl nem_relay_${N}b.va
+.include nem_ohmux_${M}i_${N}b.sp
 .global VDD VB VSS
 
 ** Create relay and start at z=0 **
