--- a/spice/templates/ohmux_test_inv.sp.tmpl
+++ b/spice/templates/ohmux_test_inv.sp.tmpl
@@ -9,7 +9,7 @@ Xmux $invpins VDD VB VSS nem_ohmux_invd${D}_${M}i_${N}b
 ** Source voltage **
 $VI
 $VS
-$RZ
+$RZN
 VDD VDD gnd ${VDD}V
 VB VB gnd ${VB}V
 VSS VS gnd 0V
