Switch to ohmux inst

--- a/liberty/templates/nem_ohmux.inst.tmpl
+++ b/liberty/templates/nem_ohmux.inst.tmpl
@@ -1,4 +1,4 @@
-set_netlist_file [get_location]/netlists/nem_ohmux_${M}i_${N}b.sp
+set_netlist_file [get_location]/netlists/nem_ohmux_invd${D}_${M}i_${N}b.sp
 
 
 ## 
@@ -17,8 +17,8 @@ $fndefs
 ## User-specified characterization and modeling configuration options.
 ## 
 create_parameter cut_netlist
-set_config_opt -opcond __default__ -- cut_netlist nem_ohmux_${M}i_${N}b.sp
-set_liberty_attribute -cell nem_ohmux_${M}i_${N}b area $area
+set_config_opt -opcond __default__ -- cut_netlist nem_ohmux_invd${D}_${M}i_${N}b.sp
+set_liberty_attribute -cell nem_ohmux_invd${D}_${M}i_${N}b area $area
 
 create_parameter state_partitions
 set_config_opt -- state_partitions $spart
