Testing new relay models

--- a/spice/templates/nem_relay.va.tmpl
+++ b/spice/templates/nem_relay.va.tmpl
@@ -47,8 +47,7 @@ parameter real cturnonval = 1e-10;
 // ==============================
 // Internal variable declarations
 // ==============================
-real Qbc, Qgb, Qgc;
-real $Qdefs;
+real Qgb, $Qdefs;
 real Ftot, Fdamp, Fk, Fel, Fcont;
 
 analog begin
