--- a/spice/templates/ohmux_test.sp.tmpl
+++ b/spice/templates/ohmux_test.sp.tmpl
@@ -4,14 +4,14 @@
 ** Tests one-hot multiplexer using analog inputs **
 
 ** Create relay and start at z=0 **
-Xmux $pins VDD VB VSS nem_ohmux_${M}i_${N}b
+Xmux $pins VDD VSNEM VSS nem_ohmux_${M}i_${N}b
 
 ** Source voltage **
 $VI
 $VS
 $RZ
 VDD VDD gnd ${VDD}V
-VB VB gnd ${VB}V
+VSNEM VSNEM gnd ${VSNEM}V
 VSS VS gnd 0V
 
 ** Options **
