--- a/spice/templates/static_sweep.sp.tmpl
+++ b/spice/templates/static_sweep.sp.tmpl
@@ -1,4 +1,4 @@
-.title <transient_sweep_${N}b.sp>
+.title <quasistatic_sweep_${N}b.sp>
 .hdl ../models/nem_relay_${N}b.va
 
 ** Create relay and start at z=0 **
@@ -6,13 +6,13 @@ Xnem ${dspins} Vg gnd z nem_relay_${N}b
 .ic V(z)=0
 
 ** Source voltage **
-Vsrc Vsrc gnd 1V
+Vsrc Vsrc gnd 0.1V
 
 ** Sweep gate voltage **
-Vg Vg gnd 0V PWL(0s 0V 10us 0V 10.0001us ${Vop}V 20us ${Vop}V 20.0001us 0V 30us 0V)
+Vg Vg gnd 0V
 
 ** Options **
-.tran 0.0001us 30us
+.dc Vg 0V START=0V STOP=5V STEP=0.01V
 .probe V(Vg) V(Vsrc) PAR('abs(I(Vsrc))') z
 .option post=2
 .option runlvl=5 accurate
