Change title of static sweep

--- a/spice/templates/static_sweep.sp.tmpl
+++ b/spice/templates/static_sweep.sp.tmpl
@@ -1,4 +1,4 @@
-.title <quasistatic_sweep_${N}b.sp>
+.title <static_sweep_${N}b.sp>
 .hdl ../models/nem_relay_${N}b.va
 
 ** Create relay and start at z=0 **
