--- a/spice/templates/nem_relay.va.tmpl
+++ b/spice/templates/nem_relay.va.tmpl
@@ -56,7 +56,7 @@ analog begin
 // Electrical Equations
 // ====================
 // I(g,b) - gate to body variable cap
-Qgb = V(g,b)*P_EPS0*(L_plate*L_plate - L_cont*L_cont*n_cont*2.5)/(Pos(mbr,z) + t_sp/K_sp);
+Qgb = V(g,b)*`P_EPS0*(L_plate*L_plate - L_cont*L_cont*n_cont*2.5)/(Pos(mbr,z) + t_sp/K_sp);
 I(g,b)<+ddt(Qgb);
 
 $dseqns
@@ -77,7 +77,6 @@ F(mbr,z) <+ Ftot + Fdamp + Fk - Fel + Fcont;
 
 // DEBUG
 $$debug("\nBEGIN");
-$$debug("P_EPS0 = %e", P_EPS0);
 $$debug("Vgate = %e", V(g));
 $$debug("Pos(z) = %e", Pos(z));
 $$debug("Pos(mbr,z) = %e", Pos(mbr,z));
