--- a/spice/templates/nem_ohmux.v.tmpl
+++ b/spice/templates/nem_ohmux.v.tmpl
@@ -1,7 +1,7 @@
 `celldefine
-module nem_ohmux_invd${D}_${M}i_${N}b ($inpins, $outpins);
+module nem_ohmux_invd${D}_${M}i_${N}b ($inpins, $invoutpins);
     input $inpins;
-    output $outpins;
+    output $invoutpins;
 
     $assigns
 
